some stuff done, need testimonials or gallery

--- a/src/scss/components/_card-two.scss
+++ b/src/scss/components/_card-two.scss
@@ -1,4 +1,9 @@
 .card-two {
+  background-color: white;
+  border: 1px solid #00000073;
+  border-radius: 4px;
+  box-shadow: #00000073 4px 4px 4px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
