--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,18 +1,18 @@
 .page-home {
-  background-image: url('../images/undraw_taking_notes_tjaf.svg');
+  background-image: url('../images/programming.svg');
   background-repeat: no-repeat;
-  background-size: 115%;
-  background-position: 49px -40px;
+  background-size: 75%;
+  background-position: center 40px;
   @include media-breakpoint-up(sm) {
-    background-size: 90%;
-    background-position: 159px -40px;
+    background-size: 35%;
+    background-position: 90% 100px;
   }
   @include media-breakpoint-up(md) {
-    background-size: 70%;
-    background-position: 100% -50px;
+    background-size: 40%;
+    background-position: 90% 75px;
   }
   @include media-breakpoint-up(lg) {
-    background-size: 60%;
-    background-position: 100% -70px;
+    background-size: 30%;
+    background-position: 75% 100px;
   }
 }
